Fix using wrong URL on frontend

--- a/public/index.html
+++ b/public/index.html
@@ -170,7 +170,7 @@
 						: location.href
 					);
 
-				href = href + '/uploads/' + fileName;
+				href = href + 'uploads/' + fileName;
 
 				console.log('got file ' + href);
 
