--- a/public/index.html
+++ b/public/index.html
@@ -9,11 +9,9 @@
 			}
 		</script>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<link rel="author" type="text/html" href="https://plus.google.com/+MuazKhan">
-		<meta name="author" content="Muaz Khan">
+		<meta name="author" content="Robbie Mackay">
 
 		<script src="/js/RecordRTC.js"> </script>
-		<!-- <script src="https://www.webrtc-experiment.com/socket.io.js"> </script> -->
 		<script src="/socket.io/socket.io.js"></script>
 
 		<style>
@@ -44,7 +42,7 @@
 	<body>
 		<h1>record.io</h1>
 		<p>
-			<video id="camera-preview" controls style="border: 1px solid rgb(15, 158, 238); width: 94%;"></video>
+			<video id="camera-preview" style="border: 1px solid rgb(15, 158, 238); width: 94%;"></video>
 		</p>
 
 		<div style="display:none;">
@@ -67,7 +65,7 @@
 			}
 
 			var socketio = io();
-			//var socketio = io.connect('http://localhost:8888/');
+			var mediaStream = false;
 
 			socketio.on('connect', function() {
 				startRecording.disabled = false;
@@ -87,11 +85,15 @@
 						audio: true,
 						video: true
 					}, function(stream) {
+						mediaStream = stream;
 						recordAudio = RecordRTC(stream, {
 							onAudioProcessStarted: function() {
 								recordVideoSeparately && recordVideo.startRecording();
 
 								cameraPreview.src = window.URL.createObjectURL(stream);
+								cameraPreview.muted = true;
+								cameraPreview.controls = false;
+
 								cameraPreview.play();
 							}
 						});
@@ -134,6 +136,8 @@
 								};
 
 								socketio.emit('message', files);
+
+								mediaStream.stop();
 							});
 
 						});
@@ -157,6 +161,7 @@
 						};
 
 						socketio.emit('message', files);
+						mediaStream.stop();
 					 });
 
 					cameraPreview.src = '';
@@ -176,6 +181,8 @@
 
 				cameraPreview.src = href
 				cameraPreview.play();
+				cameraPreview.muted = false;
+				cameraPreview.controls = true;
 			});
 
 			socketio.on('ffmpeg-output', function(result) {
