Add download link

--- a/public/index.html
+++ b/public/index.html
@@ -55,6 +55,9 @@
 			<button id="stop-recording" disabled>Stop Recording</button>
 		</div>
 
+		<div id="video-link">
+		</div>
+
 		<script src="/js/main.js"> </script>
 
 	</body>
