--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<title>Record.io</title>
+		<title>recordly.io</title>
 		<script>
 			if (location.href.indexOf('file:') == 0) {
 				document.write('<h1 style="color:red;">Please load this HTML file on HTTP or HTTPS.</h1>');
@@ -40,7 +40,7 @@
 		</style>
 	</head>
 	<body>
-		<h1>record.io</h1>
+		<h1>recordly.io</h1>
 		<p>
 			<video id="camera-preview" style="border: 1px solid rgb(15, 158, 238); width: 94%;"></video>
 		</p>
