Customising fonts and layout

--- a/public/index.html
+++ b/public/index.html
@@ -11,13 +11,16 @@
 		<script src="/socket.io/socket.io.js"></script>
 
 		<link rel="stylesheet" href="/css/main.css">
+		<link rel="stylesheet" href="//brick.a.ssl.fastly.net/Rokkitt:100,200,300,400,500,600,700,800,900:f">
+		<link rel="stylesheet" href="//brick.a.ssl.fastly.net/Open Sans:300,300i,400,400i,600,600i,700,700i,900,900i:f">
 	</head>
 	<body>
 
 		<div class="outer">
 			<div class="header">
 				<!-- <i class="fa fa-circle"></i> -->
-				<h1><i class="fa fa-circle"></i><span> recordly.io</span></h1>
+				<h1><i class="fa fa-video-camera"></i><span> recordly.io</span></h1>
+				<h3 class="tagline">Record. Publish. Share.</h3>
 			</div>
 
 			<div class="video-wrapper">
@@ -30,7 +33,7 @@
 					</div>
 
 					<div class="recording-buttons">
-						<button id="start-recording" disabled>Start Recording</button>
+						<button id="start-recording" disabled>Get started <i class="fa fa-arrow-right"></i></button>
 						<button id="stop-recording" disabled>Stop Recording</button>
 					</div>
 
@@ -38,7 +41,6 @@
 				</div>
 			</div>
 
-			<h3 class="tagline">Record. Publish. Share.</h3>
 <!--
 			<div class="features">
 				<div class="feature">
