comment end of divs

--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
 
 					<div id="video-link"></div>
 				</div>
-			</div>
+			</div> <!-- /video-wrapper -->
 
 <!--
 			<div class="features">
@@ -57,7 +57,8 @@
 				</div>
 			</div>
 -->
-		</div>
+
+		</div> <!-- /outer -->
 
 		<script src="/js/main.js"> </script>
 
