--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
 
 					<div class="recording-buttons">
 						<button id="start-recording" disabled>Get started <i class="fa fa-arrow-right"></i></button>
-						<button id="stop-recording" disabled>Stop Recording</button>
+						<button id="stop-recording" disabled>All done</button>
 					</div>
 
 					<div id="video-link"></div>
