--- a/public/index.html
+++ b/public/index.html
@@ -58,6 +58,13 @@
 			</div>
 -->
 
+			<div class="footer">
+				<small>Recordly.io is an experiment by Robbie Mackay
+				| <a href="mailto:info@recordly.io">Contact</a>
+				| <a href="http://github.com/rjmackay/recordly.io">Github</a>
+				</small>
+			</div>
+
 		</div> <!-- /outer -->
 
 		<script src="/js/main.js"> </script>
