--- a/public/index.html
+++ b/public/index.html
@@ -62,6 +62,7 @@
 				<small>Recordly.io is an experiment by Robbie Mackay
 				| <a href="mailto:info@recordly.io">Contact</a>
 				| <a href="http://github.com/rjmackay/recordly.io">Github</a>
+				| &copy; Robbie Mackay
 				</small>
 			</div>
 
