--- a/public/index.html
+++ b/public/index.html
@@ -59,7 +59,7 @@
 -->
 
 			<div class="footer">
-				<small>Recordly.io is an experiment by Robbie Mackay
+				<small>recordly.io is an experiment by Robbie Mackay
 				| <a href="mailto:info@recordly.io">Contact</a>
 				| <a href="http://github.com/rjmackay/recordly.io">Github</a>
 				| &copy; Robbie Mackay
