--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
 
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="author" content="Robbie Mackay">
+		<meta name="viewport" content="width=device-width,initial-scale=1">
 
 		<script src="/js/RecordRTC.js"> </script>
 		<script src="/socket.io/socket.io.js"></script>
